--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,15 @@
+/* Thème clair par défaut */
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #131120;
+  --foreground: #202187;
+  --cbackground: rgba(40, 40, 66, 0.4);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+/* Thème sombre */
+[data-theme="light"] {
+  --background: #EDD0D2;
+  --foreground: #A67FAB;
+  --cbackground: rgba(241, 234, 228, 0.4);
 }
 
 html,
@@ -17,8 +19,16 @@ body {
 }
 
 body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  /* Centre horizontalement */
+  align-items: center;
+  /* Centre verticalement */
+  background-color: var(--background);
   color: var(--foreground);
-  background: var(--background);
+  transition: background-color 0.3s, color 0.3s;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -28,6 +38,8 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  cursor: crosshair;
+  /* border: 1px solid red; */
 }
 
 a {
