--- a/src/app/Hero.module.css
+++ b/src/app/Hero.module.css
@@ -67,3 +67,24 @@
 .dropdownMenu li a:hover {
     transform: scale(1.1);
 }
+
+@media (max-width: 600px) {
+    .menuWrapper {
+        display: flex;
+        justify-content: center;
+        /* Centre le menu */
+        margin-left: 0;
+        /* Supprime la marge gauche */
+    }
+
+    .dropdownMenu {
+        left: 50%;
+        /* Centre horizontalement */
+        transform: translateX(-50%);
+    }
+
+    .h1 {
+        font-size: 25px;
+        text-align: center;
+    }
+}
