--- a/src/app/About.module.css
+++ b/src/app/About.module.css
@@ -8,22 +8,98 @@
     text-align: center;
     /* Centre le texte à l'intérieur */
     position: relative;
-    top: 125PX;
 }
 
-.h2 {
-    max-width: 300px;
-    /* Limite la largeur maximale du texte */
-    margin: 0;
-    /* Supprime les marges par défaut */
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 500px;
+    gap: 20px;
 }
 
-@media (max-width: 600px) {
-    .about {
-        top: 0;
+.container>div {
+    flex: 0 0 200px;
+    border-radius: 0.5rem;
+    transition: 0.5s ease-in-out;
+    box-shadow: 1px 5px 15px var(--background);
+    position: relative;
+    overflow: hidden;
+
+    &:nth-of-type(1) {
+        background: url("../assets/img/portfolio3D.png") no-repeat 50% / cover;
     }
 
-    .h2 {
-        max-width: 200px;
+    &:nth-of-type(2) {
+        background: url("../assets/img/test.jpg") no-repeat 50% / cover;
+    }
+
+    &:nth-of-type(3) {
+        background: url("../assets/img/test.jpg") no-repeat 50% / cover;
+    }
+
+    &:nth-of-type(4) {
+        background: url("../assets/img/test.jpg") no-repeat 50% / cover;
+    }
+
+    &:nth-of-type(5) {
+        background: url("../assets/img/test.jpg") no-repeat 50% / cover;
+    }
+
+    .content {
+        font-size: 1.5rem;
+        color: var(--foreground);
+        display: flex;
+        align-items: center;
+        padding: 15px;
+        opacity: 0;
+        flex-direction: column;
+        height: 100%;
+        justify-content: flex-end;
+        background: var(--background);
+        background: linear-gradient(0deg,
+                var(--background) 0%,
+                var(--cbackground) 100%);
+        transform: translatey(100%);
+        transition: opacity 0.5s ease-in-out, transform 0.5s 0.2s;
+        visibility: hidden;
+
+        span {
+            display: block;
+            margin-top: 5px;
+            font-size: 1.2rem;
+        }
+    }
+
+    &:hover {
+        flex: 0 0 400px;
+        box-shadow: 1px 3px 15px var(--foreground);
+        transform: translatey(-30px);
+    }
+
+    &:hover .content {
+        opacity: 1;
+        transform: translatey(0%);
+        visibility: visible;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        gap: 10;
+    }
+
+    .container>div {
+        top: 30px;
+        flex: 0 1 calc(15%);
+        /* Sur mobile, occupe 15% de la largeur */
+
+        &:hover {
+            flex: 0 0 150px;
+        }
+
+        .content {
+            font-size: 1rem;
+        }
     }
 }
