--- a/src/app/projets/Projects.module.css
+++ b/src/app/projets/Projects.module.css
@@ -65,15 +65,19 @@
 @media (max-width: 1000px) {
     .projectContainer {
         height: 400px;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
         padding: 20px;
+        align-items: center;
     }
 
     .projectCard {
-        width: 200px;
+        width: 100%;
         height: 180px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: top center;
     }
 
     .projectCard:hover {
